--- a/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
@@ -330,18 +330,17 @@ $(document).ready(function() {
 	        	$(this).siblings().not(".xa-clock").addClass('xui-i-voiceStop');
 			});
 			$(this).siblings('#media').bind('timeupdate', function() {
-	        console.log(this.currentTime);
-	        $(this).parent().find(".xa-clock").html(parseInt(this.duration)+'&nbsp;"');
+		        if(parseInt(this.duration)){
+		        	console.log('ddddddddddddddddddddddddddd',this.duration)
+		        	$(this).parent().find(".xa-clock").html(parseInt(this.duration)+'&nbsp;"');
+		        }
+		        else
+		        {
+		        	
+		        }
 			});
 		}
 	});
-	_.delay(function() {
-		$(".xui-i-voiceContent").each(function(){
-			var time=$(this).siblings('#media')[0].duration+'&nbsp;"';
-			$(this).parent().find(".xa-clock").html(parseInt(time));
-		});
-	}, 8000);
-	
 
 	//start: 修改备注名
 	$('body').delegate('.xa-update-remark-name', 'click', function(event) {
