修复发货后调用common_interval_checkAPI，避免common_interval_check_func重复调用，避免ConfirmView无法关闭的BUG

--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -666,7 +666,7 @@ $(document).ready(function() {
 					args: args,
 					success: function(data) {
 						$('[data-ui-role="advanced-table"]').data('view').reload();
-                        common_interval_check_func();
+                        // common_interval_check_func();
 					},
 					error: function() {
 						}
@@ -700,7 +700,7 @@ $(document).ready(function() {
 					args: args,
 					success: function(data) {
 						$('[data-ui-role="advanced-table"]').data('view').reload();
-                        common_interval_check_func();
+                        // common_interval_check_func();
 					},
 					error: function() {
 						}
