修改下单后 订单详情 领取红包

--- a/weapp/mall/templates/mall/editor/red_envelope_rules.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_rules.html
@@ -58,7 +58,7 @@
 
             {% else %}
                 {% if rule.status %}
-                    <p>{{ rule.rule_name }}&nbsp;&nbsp;<span style="color:#ccc;">红包活动库存即将用完</span></p>
+                    <p>{{ rule.rule_name }}&nbsp;&nbsp;<span style="color: #8c8c8c;">红包活动库存即将用完</span></p>
                 {% endif %}
 
             {% endif %}
