--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
@@ -111,14 +111,14 @@
             </ul>
         </div>
     </fieldset>
-    <!-- 订单商品列表 -->
-    {% if order.red_envelope %}
-    <fieldset class="xui-section clearfix" style="padding:9px 12px;">
-        <a class="fr {% if order.red_envelope_created %}xui-gotRedBtn{% else %}xui-toGetRedBtn{% endif %}" href="/workbench/jqm/preview/?module=market_tool:share_red_envelope&model=share_red_envelope&action=get&webapp_owner_id={{request.webapp_owner_id}}&order_id={{order.id}}&red_envelope_rule_id={{order.red_envelope}}">
-        {% if order.red_envelope_created %}最近一次领取的红包
-        {% else %}未领取的红包{% endif %}</a>
-    </fieldset>
-    {% endif %}
+{#    <!-- 订单商品列表 -->#}
+{#    {% if order.red_envelope %}#}
+{#    <fieldset class="xui-section clearfix" style="padding:9px 12px;">#}
+{#        <a class="fr {% if order.red_envelope_created %}xui-gotRedBtn{% else %}xui-toGetRedBtn{% endif %}" href="/workbench/jqm/preview/?module=market_tool:share_red_envelope&model=share_red_envelope&action=get&webapp_owner_id={{request.webapp_owner_id}}&order_id={{order.id}}&red_envelope_rule_id={{order.red_envelope}}">#}
+{#        {% if order.red_envelope_created %}最近一次领取的红包#}
+{#        {% else %}未领取的红包{% endif %}</a>#}
+{#    </fieldset>#}
+{#    {% endif %}#}
     <!--支付方式及发票-->
     <fieldset class="xui-section xui-section-title">
         <div class="xui-inner clearfix">
@@ -194,7 +194,7 @@
     </div>
     </fieldset>
 
-    {% if order.status == 0 or order.status == 4  %}
+    {% if order.status == 0 or order.status == 4 or  order.status == 3 or order.status == 5%}
     <div style="height:50px;"></div>
     <div class="clearfix xui-stupidBar">
         <div class="fr xui-btnOuter">
@@ -203,13 +203,22 @@
             <a href="javascript:void(0);" type="button" id="cancelOrderButton" class="xui-btn xui-btn-disable">取消订单</a>
             <a href="javascript:void(0);" type="button" id="pay_order" class="xui-btn xui-btn-danger xa-pay">支付</a>
             {% endif %}
-
-            {% if order.status == 4 %}
-            <!-- 已发货 -->
-            <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=express_detail&action=get&order_id={{order.id}}" type="button" class="xui-btn xui-btn-disable">查看物流</a>
-            {% if order.session_data.has_comfire_button %}
-            <a href="javascript:void(0);" type="button" class="xui-btn xui-btn-danger xa-receipt">确认收货</a>
+            <!-- 红包 -->
+            {% if order.red_envelope %}
+                <a href="/workbench/jqm/preview/?module=market_tool:share_red_envelope&model=share_red_envelope&action=get&webapp_owner_id={{request.webapp_owner_id}}&order_id={{order.id}}&red_envelope_rule_id={{order.red_envelope}}" class="xui-btn xui-btn-warring" type="button">
+                    {% if order.red_envelope_created %}
+                        分享红包
+                    {% else %}
+                        领取红包
+                    {% endif %}
+                </a>
             {% endif %}
+            {% if order.status == 4 %}
+                <!-- 已发货 -->
+                <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=express_detail&action=get&order_id={{order.id}}" type="button" class="xui-btn xui-btn-disable">查看物流</a>
+                {% if order.session_data.has_comfire_button %}
+                <a href="javascript:void(0);" type="button" class="xui-btn xui-btn-danger xa-receipt">确认收货</a>
+                {% endif %}
             {% endif %}
                 <!-- {% if request.user.is_weizoom_mall %}
                     <a data-role="button" class="xui-btn xui-btn-success btn-back" href="/termite/workbench/jqm/preview/?woid={{request.webapp_owner_id}}">返回商城首页</a>
