--- a/weapp/static_v2/js/view/apps_prize_selector_v4/template.html
+++ b/weapp/static_v2/js/view/apps_prize_selector_v4/template.html
@@ -1,12 +1,20 @@
 <script id="apps-prize-selector-v4-tmpl" type="text/x-handlebar-tmpl">
 <div class="xui-apps-prizeSelector">
-	<div class="coupon_div xa-optionTarget xa-selectCoupon" data-target="coupon">
+	<div class="coupon_div xa-selectCoupon" data-target="coupon">
 		<a
 			href="javascript:void(0);"
 			class="ml5"
 		>请选择优惠券	</a>
 		<input style="width:0;background:#F9F9F9;border:0" type="text" data-validate="require-notempty::请选择一张优惠券" />
 		<div class="errorHint" style="margin-left: 58%;width: 100px;"></div>
+	</div>
+	<div class="ml5 xui-inline xa-selectedCoupon xa-optionTarget xui-hide">
+		<div class="pr xui-i-selectedBox">
+			<span class="xui-i-selected-title xa-couponName">{{prize.data.name}}</span>
+			<button class="close xui-close xa-removeCoupon" style="display:block;opacity:1;line-height:16px;" type="button">×</button>
+		</div>
+
+		<a href="javascript:void(0);" class="xa-selectCoupon ml5">修改</a>
 	</div>
 	<div class="errorHint" style="margin-left: 37%;"></div>
 </div>
