--- a/weapp/termite/static/v4/css/widget.css
+++ b/weapp/termite/static/v4/css/widget.css
@@ -1144,7 +1144,7 @@ ul.wui-relatelink li h3{
     width: 100%;
     /*height: 213px;*/
     overflow: hidden;
-    background: #fff;
+    /*background: #fff;*/
     box-sizing:border-box;
     padding-top: 1px;
 }
