--- a/weapp/static_v2/css/new_weixin_message.css
+++ b/weapp/static_v2/css/new_weixin_message.css
@@ -125,9 +125,9 @@
 
 .xui-weixin-realtimeMessagePage .xui-message .xui-clock{
     float: left;
-    position: relative;
-    left: 100px;
-    top: -20px;
+    position: absolute;
+    left: 110px;
+    top: 45px;
     font-size: 12px;
     color: #999;
 }
@@ -263,7 +263,7 @@
 
 .xui-weixin-realtimeMessagePage .xui-i-voiceStop {
     background: url("/static_v2/img/weixin/voice_stop.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
-    height: 23px;
+    height: 24px;
 }
 
 .xui-weixin-realtimeMessagePage .xui-i-voiceIco {
@@ -280,7 +280,6 @@
 
 .xui-weixin-realtimeMessagePage .xui-i-voicePlay {
     background: url("/static_v2/img/weixin/voice_play.gif") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
-    margin-top: -1px;
 }
 
 .xui-weixin-realtimeMessagePage [class^="xui-i-sessionsIcon-"], [class*=" xui-i-sessionsIcon-"] {
