--- a/weapp/weixin2/templates/weixin/message/realtime_messages.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages.html
@@ -86,7 +86,7 @@
 						</div>
 					</td>
 					<td>
-						<div class="xui-i-text xa-displayMessages ml30 mr50" data-replied="${message.could_replied}">
+						<div class="xui-i-text xa-displayMessages ml30 mr50 pr" data-replied="${message.could_replied}">
 							{{if message.message_type == 'text'}}
 								{{if message.is_news_type}}
 									<span name="messageContent">${message.text} <span class="xui-i-newses">图文</span><a href="../../new_weixin/news_preview/?id=${message.material_id}" target="_blank">${message.news_title}</a></span>
@@ -100,13 +100,12 @@
 								</a>
 							{{/if}}
 							{{if message.message_type == 'voice'}}
-								<div class="xui-i-voiceContainer pr">
+								<div name="messageContent" class="xui-i-voiceContainer ">
 									<audio id="media" class="hidden" src="${audio_url}" preload="auto" controls></audio>
 									<div class="xui-i-voiceContent xui-i-voiceStop cursorPointer"></div>
 									<span class="xui-clock xa-clock" style="left: 100px;position:absolute;top:5px;"></span>
 								</div>
 							{{/if}}
-
 
 							<div class="xui-i-remark xa-i-remark {{if message.remark}} "" {{else}} xui-hidden {{/if}}">
 								{{if message.remark}}
@@ -205,7 +204,7 @@ if (__realtimeMessageQueryString) {
 
 function submitReply(message, openid, sessionId, $current) {
 	var $parent = $current.parents('tr');
-	var $messageContent = $parent.find('span[name="messageContent"]');
+	var $messageContent = $parent.find('[name="messageContent"]');
 	var $messageReplyAt = $parent.find('span[name="messageReplyAt"]');
 	var $messageCreatedAt = $parent.find('div[name="messageCreatedAt"]');
 
@@ -280,16 +279,13 @@ $(document).ready(function() {
 				$(this).siblings().removeClass('xui-i-voicePlay');
 				$(this).siblings().addClass('xui-i-voiceStop');
 			});
-			$(this).parent().find(".xa-clock").html(parseInt(this.duration)+'&nbsp;"');
+			if(parseInt(this.duration))
+			{
+				$(this).parent().find(".xa-clock").html(parseInt(this.duration)+'&nbsp;"');
+			}
+			
 		}
 	});
-
-	_.delay(function() {
-		$(".xui-i-voiceContent").each(function(){
-			var time=$(this).siblings('#media')[0].duration+'&nbsp;"';
-			$(this).parent().find(".xa-clock").html(parseInt(time));
-		});
-	}, 4000);
 
 	var filterBox = new W.view.weixin.RealtimeMessageFilterView({
 		el: "#weixin-realtime-message-filter-view",
