--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_list.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_list.html
@@ -67,7 +67,7 @@
                                          </div>
                                          {% endfor %}
                                     </div>
-                                    <span class="c9 em75 fr">共{{order.products|length}}件</span>
+                                    <span class="c9 em75 fr">共{{order.product_count}}件</span>
                                 </div>
                                 {% else %}
                                     {% for product in order.products %}
@@ -90,14 +90,7 @@
                                             </div>
                                             {% endif %}
                                             <div class="em9 clearfix c9 em65 xui-productNum">
-                                                <!-- 积分商品 -->
-                                                {% if order.type == "integral" %}
-                                                    <span>{{ product.price }}积分Ｘ{{ product.number }}</span>
-
-                                                <!-- 普通商品 -->
-                                                {% else %}
-                                                    <span class="mr5">Ｘ{{ product.number }}</span>
-                                                {% endif %}
+                                                <span class="mr5">Ｘ{{ order.product_count }}</span>
                                             </div>
                                         </div>
                                     </div>
@@ -172,7 +165,7 @@
                                          </div>
                                          {% endfor %}
                                     </div>
-                                    <span class="c9 em75 fr">共{{order.products|length}}件</span>
+                                    <span class="c9 em75 fr">共{{order.product_count}}件</span>
                                 </div>
                                 {% else %}
                                     {% for product in order.products %}
@@ -194,18 +187,7 @@
                                             </div>
                                             {% endif %}
                                             <div class="em9 clearfix c9 em65 xui-productNum">
-                                                {% if is_delivery_plan %}
-                                                    <span class="fl">￥{{order.final_price}}</span>
-                                                {% else %}
-                                                    <!-- 积分商品 -->
-                                                    {% if order.type == "integral" %}
-                                                        <span class="fl">{{ product.price }}积分Ｘ{{ product.number }}</span>
-
-                                                    <!-- 普通商品 -->
-                                                    {% else %}
-                                                        <span class="fl">Ｘ{{ product.number }}</span>
-                                                    {% endif %}
-                                                {% endif %}
+                                                <span class="fl">Ｘ{{ order.product_count }}</span>
                                             </div>
                                         </div>
                                     </div>
@@ -257,7 +239,7 @@
                                          </div>
                                          {% endfor %}
                                     </div>
-                                    <span class="c9 em75 fr">共{{order.products|length}}件</span>
+                                    <span class="c9 em75 fr">共{{order.product_count}}件</span>
                                 </div>
                             {% else %}
                                 {% for product in order.products %}
@@ -279,18 +261,7 @@
                                         </div>
                                         {% endif %}
                                         <div class="em9 clearfix c9 em65 xui-productNum">
-                                            {% if is_delivery_plan %}
-                                                <span class="fl">￥{{order.final_price}}</span>
-                                            {% else %}
-                                                <!-- 积分商品 -->
-                                                {% if order.type == "integral" %}
-                                                    <span class="fl">{{ product.price }}积分Ｘ{{ product.number }}</span>
-
-                                                <!-- 普通商品 -->
-                                                {% else %}
-                                                    <span class="fl">Ｘ{{ product.number }}</span>
-                                                {% endif %}
-                                            {% endif %}
+                                            <span class="fl">Ｘ{{ order.product_count }}</span>
                                         </div>
                                     </div>
                                 </div>
@@ -339,7 +310,7 @@
                                          </div>
                                          {% endfor %}
                                     </div>
-                                    <span class="c9 em75 fr">共{{order.products|length}}件</span>
+                                    <span class="c9 em75 fr">共{{order.product_count}}件</span>
                                 </div>
                                 {% else %}
                                     {% for product in order.products %}
@@ -362,18 +333,7 @@
                                             </div>
                                             {% endif %}
                                             <div class="em9 clearfix c9 em65 xui-productNum">
-                                                {% if is_delivery_plan %}
-                                                    <span class="fl">￥{{order.final_price}}</span>
-                                                {% else %}
-                                                    <!-- 积分商品 -->
-                                                    {% if order.type == "integral" %}
-                                                        <span class="fl">{{ product.price }}积分Ｘ{{ product.number }}</span>
-
-                                                    <!-- 普通商品 -->
-                                                    {% else %}
-                                                        <span class="fl">Ｘ{{ product.number }}</span>
-                                                    {% endif %}
-                                                {% endif %}
+                                                        <span class="fl">Ｘ{{ order.product_count }}</span>
                                             </div>
                                         </div>
                                     </div>
