需求4811 订单管理增加物流其他功能

--- a/weapp/mall/templates/mall/editor/order_detail.html
+++ b/weapp/mall/templates/mall/editor/order_detail.html
@@ -168,7 +168,13 @@
                   物流公司名称：{% if child_order.express_company_name %} {{ child_order.express_company_name|get_company_name_by_value }}   {% endif %}
                 </p>
                 <p>
-                  运单号：{% if child_order.express_company_name %} <a target="_blank" href="http://www.kuaidi100.com/chaxun?com={{child_order.express_company_name}}&nu={{ child_order.express_number }}">{{ child_order.express_number }}</a>{% endif %}
+                  运单号：{% if child_order.express_company_name %}
+                            {% if child_order.is_100 %}
+                                <a target="_blank" href="http://www.kuaidi100.com/chaxun?com={{child_order.express_company_name}}&nu={{ child_order.express_number }}">{{ child_order.express_number }}</a>
+                            {% else %}
+                                {{child_order.express_number  }}
+                            {% endif %}
+                        {% endif %}
                 </p>
                 <p>
                   {% for detail in child_order.get_express_details %}
@@ -187,7 +193,13 @@
               物流公司名称：{% if order.express_company_name %} {{ order.express_company_name|get_company_name_by_value }}   {% endif %}
             </p>
             <p>
-              运单号：{% if order.express_company_name %} <a target="_blank" href="http://www.kuaidi100.com/chaxun?com={{order.express_company_name}}&nu={{ order.express_number }}">{{ order.express_number }}</a>{% endif %}
+              运单号：{% if order.express_company_name %}
+                        {% if order.is_100 %}
+                            <a target="_blank" href="http://www.kuaidi100.com/chaxun?com={{order.express_company_name}}&nu={{ order.express_number }}">{{ order.express_number }}</a>
+                        {% else %}
+                            {{order.express_number  }}
+                        {% endif %}
+                    {% endif %}
             </p>
             <p>
               {% for detail in order.get_express_details %}
