--- a/weapp/static_v2/js/view/mall_order_ship/template.html
+++ b/weapp/static_v2/js/view/mall_order_ship/template.html
@@ -17,8 +17,15 @@
 		<div class="form-group">
 			<label class="col-sm-4 control-label star_show">物流公司：</label>
 			<div class="col-sm-7">
-				<select class="ua-logistics form-control">
+				<select class="ua-logistics form-control xa-logistics">
 				</select>
+			</div>
+		</div>
+		<div class="form-group xui-logistics-other-express-name mb5" style="display:none;" >
+			<label class="col-sm-4 control-label star_show">物流名称：</label>
+			<div class="col-sm-7">
+				<input name="logistics_other_express_name" class="form-control" type="text"/>
+                <p style="white-space: nowrap;margin: 5px auto 0 -22px;color:#da0909;">不能跟踪物流信息,且需手动完成订单</p>
 			</div>
 		</div>
 		<div class="form-group">
