--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -297,15 +297,10 @@
 
             var daily_points = descriptionModel.get('daily_points');
             var daily_prizes = descriptionModel.get('daily_prizes');
-                    console.log('!!!!!!!!!!!!!!!!!!!');
-                    console.log(daily_prizes);
             var prize_setings = {
                 '0':{
                         'integral':daily_points,
-                        'coupon':daily_prizes ? {
-                            'id': daily_prizes.data.id,
-                            'name': daily_prizes.data.name
-                        } : ''
+                        'coupon':daily_prizes ? daily_prizes : ''
                     }
                 };
             for(var i=0;i<dynamicComponents.length;i++){
@@ -313,10 +308,7 @@
                 var serial_prizes = dynamicComponents[i].model.get('serial_count_prizes');
                 prize_setings[index]={
                     'integral':dynamicComponents[i].model.get('serial_count_points'),
-                    'coupon':serial_prizes? {
-                        'id': serial_prizes.data.id,
-                        'name': serial_prizes.data.name
-                    }: ''
+                    'coupon':serial_prizes? serial_prizes: ''
                 }
             }
 
@@ -324,14 +316,14 @@
                 'name':name,
                 'share':JSON.stringify(share),
                 'reply':JSON.stringify(reply),
-                'prize_settings':JSON.stringify(prize_setings),
-                'status': signStatus
+                'prize_settings':JSON.stringify(prize_setings)
             };
 
 
           if (isCreateNewData) {
             var method = 'put';
             args['related_page_id'] = data['project_id'];
+              args['status'] = signStatus;
           } else {
             var method = 'post';
             args['id'] = W.activityId;
