--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -32,7 +32,7 @@
             border-radius: 40px;
             box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.4);
             -moz-border-radius: 40px;
-            -webkit-border-radius: 40px;
+            -webkit-border-radius: 50%;
             margin-left: auto;
             margin-right: auto;
         }
@@ -43,7 +43,7 @@
             line-height: 0; /* remove line-height */
             display: inline-block; /* circle wraps image */
             border-radius: 50%; /* relative value */
-            -moz-border-radius: 50%;
+            -moz-border-radius: 40px;
             -webkit-border-radius: 50%;
             transition: linear 0.25s;
         }
@@ -76,9 +76,8 @@
             height: 200px;
             padding: 2px;
             background: #9AD2EB;
-            border-radius: 50%;
-            -moz-border-radius: 40px;
-            -webkit-border-radius: 40px;
+            border-radius: 120px;
+            -webkit-border-radius: 50%;
             margin-left: auto;
             margin-right: auto;
             text-align: center;
@@ -90,7 +89,8 @@
             height: 170px;
             background: #0090D6;
             display: inline-block; /* circle wraps image */
-            border-radius: 50%; /* relative value */
+            border-radius: 120px;
+            -webkit-border-radius: 50%;
             margin: auto;
             top: 0px;
             left: 0px;
