update：sign样式（分组的改变，数据？？）

--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -36,6 +36,30 @@
             border-radius: 3px;
             margin: 10px;
         }
+        .xui-propertyView-app-ShareGroup,.xui-propertyView-app-ReplyGroup,.xui-propertyView-app-SignSettingGroupName{
+            border-top: 1px solid #DDDDDD;
+            padding-top: 15px;
+            margin-top: 15px;
+            margin-bottom: 10px;
+        }
+        .xui-propertyView-app-ShareGroup:first-child,.xui-propertyView-app-ReplyGroup:first-child,.xui-propertyView-app-SignSettingGroupName:first-child{
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+        .xui-propertyView-app-SignSettingGroup{
+            border:1px solid #DDDDDD;
+            background-color: #FFFFFF;
+            padding-bottom: 5px;
+            padding-top: 5px;
+        }
+        .propertyGroup_property_dynamicControlField_content{
+            width: 100%;
+            border:1px solid #DDDDDD;
+            background-color: #FFFFFF;
+            padding-bottom: 5px;
+            padding-top: 5px;
+
+        }
     </style>
 {% endblock %}
 
