--- a/weapp/static_v2/js/view/apps_prize_selector_v4/template.html
+++ b/weapp/static_v2/js/view/apps_prize_selector_v4/template.html
@@ -8,7 +8,7 @@
 		<input style="width:0;background:#F9F9F9;border:0" type="text" data-validate="require-notempty::请选择一张优惠券" />
 		<div class="errorHint" style="margin-left: 58%;width: 100px;"></div>
 	</div>
-	<div class="ml5 xui-inline xa-selectedCoupon xa-optionTarget {{#ifCond prize.name '==' ''}}xui-hide{{/ifCond}}">
+	<div class="ml5 xui-inline xa-selectedCoupon xa-optionTarget {{#isnotvalid prize}}xui-hide{{/isnotvalid}}">
 		<div class="pr xui-i-selectedBox">
 			<span class="xui-i-selected-title xa-couponName">{{prize.name}}</span>
 			<button class="close xui-close xa-removeCoupon" style="display:block;opacity:1;line-height:16px;" type="button">×</button>
