--- a/weapp/static_v2/js/view/common_select_website_link_view/template.html
+++ b/weapp/static_v2/js/view/common_select_website_link_view/template.html
@@ -20,5 +20,6 @@
     {{if shengjing}}
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="shengjingCustom">盛景定制APP</a></li>
     {{/if}}
+    <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="sign">签到</a></li>
 </ul>
 </script>
