（样式问题）【微商城管理】-【会员管理】-【推广扫码】设置积分奖励时，错误提示信息的样式错误 （样式问题）-【微商城管理】-【会员】-【会员列表】-会员详情的”浏览轨迹“的样式问题

--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -277,7 +277,7 @@
 		        	</div>
 
 		        </div>
-		        <table class="xui-tab-memberifo">
+		        <table class="xui-tab-memberifo ">
 		        	<thead>
 		        		<tr>
 
@@ -332,7 +332,7 @@
 		        	</thead>
 		        </table>
 				<div style="height:225px; overflow-y:scroll;">
-				<table class="xui-tab-memberifo">
+				<table class="xui-tab-memberifo" style="border-top:none">
 		        	<tbody>
 		        		{% for member_browse_record in member_browse_records %}
 		        		<tr>
