--- a/weapp/member/templates/member/editor/member_qrcode.html
+++ b/weapp/member/templates/member/editor/member_qrcode.html
@@ -52,7 +52,7 @@
 					{% else %}
 						style="display:none;" 
 					{% endif %} placeholder="请输入积分数值">
-					<div class="errorHint"></div>
+					<span class="errorHint"></span>
 				</fieldset>
 				<fieldset class="xui-info">
 					<label for="" class="star_show">页面描述：</label>
