--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -60,6 +60,9 @@
             padding-top: 5px;
 
         }
+        .xui-outerFunctionTrigger{
+            margin-left: 5px;
+        }
     </style>
 {% endblock %}
 
@@ -416,11 +419,20 @@
           }
         });
       });
-      
-      $(document).click(function() {
-        // 点击空白处，触发事件
+      //说明
+      $(document).click(function(event) {
+      // 点击空白处，触发事件
+
+      //签到奖励说明
+      if(event.target.id == 'outerFunctionTrigger'){
+            W.dialog.showDialog('W.dialog.sign.InstructionDialog',{
+                success: function(data){}
+            });
+      }
+
         W.Broadcaster.trigger('designpage:cancel_delete');
       });
+
 
         //绑定标签页切换事件
         $('.xa-tag-group').delegate('.xui-i-tag', 'click', function(){
@@ -481,6 +493,41 @@
         }
     }
   </script>
-{% block js %}{% endblock %}
+{% block js %}
+<script id="sign-chance-dialog-tmpl-src" type="text/x-jquery-tmpl">
+<div class="modal fade">
+    <div class="modal-dialog modal-lg" style="width: 600px;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button aria-hidden="true" data-dismiss="modal" class="close" type="button"><span class="xui-closeColor" aria-hidden="true">&times;</span></button>
+                <h3 class="modal-title">拿到奖励说明</h3>
+            </div>
+
+            <div class="modal-body ml15">
+                <div>
+                    <p>1、每日签到奖励：用户每天签到的奖励</p>
+                    <p class="pl20"> 例如：设置为5积分，则用户每次签到都可获得5积分。</p>
+                </div>
+                <div>
+                    <p>2、连续签到至X天：用户连续签到至X天的奖励</p>
+                    <p class="pl20">例如：设置连续签到10，奖励为100积分，则用户连续签到至第10天可获得100积分。</p>
+
+                </div>
+                <div>
+                    <p>3、周期：连续签到天数最高设置为30天，则用户签到至30天后，连续签到天数变为0，重新开始签到规则。</p>
+                </div>
+                <div>
+                    <p>4、当签到奖励设置为优惠劵，且优惠券库存不足时，用户签到时会提示：奖品已领完，请联系客服补发！</p>
+                </div>
+            </div>
+
+            <div class="modal-footer modal-footerBg">
+                <button class="btn btn-success" aria-hidden="true" data-dismiss="modal" style="width:110px;height:36px;background:#207cbe; color:#ffffff;">关&nbsp;&nbsp;闭</button>
+            </div>
+        </div>
+    </div>
+</div>
+</script>
+{% endblock %}
 {% endblock %}
 
